# totp-cli

./: .gitignore  README.md  pyproject.toml
completions/: totp.bash  totp.fish  totp.zsh
src/totp_cli/: __init__.py  json_util.py  main.py  storage.py  totp_manager.py
